--- a/WebContent/financeiro/receber/buscaContasReceber.xhtml
+++ b/WebContent/financeiro/receber/buscaContasReceber.xhtml
@@ -10,111 +10,119 @@
 	<p:panel rendered="#{contasReceberBean.estado eq 'P'}">
 		<div class="content">
 			<div class="ui-fluid">
-				<div class="ui-g">
-					<h:panelGroup id="botoes">
-						<!-- Botão Pagamento -->
-						<p:commandButton value="Pagamento"
-							actionListener="#{contasReceberBean.setarVariaveisNulas}"
-							rendered="#{contasReceberBean.contasReceberModel.status eq 'P' and (
-						contasReceberBean.contasReceberModel.idContasReceber > 0)}"
-							style="height:40px;width:170px; 
-							background-color: darkcyan; background: darkcyan; color:white !important"
-							ajax="true" immediate="true" id="buttonPagamento"
-							icon="fa fa-info-circle" iconPos="right"
-							oncomplete="PF('relancarPagamento').show()" update=":formulario">
-							<f:setPropertyActionListener value="#{d}"
-								target="#{contasReceberBean.contasReceberModel}" />
-						</p:commandButton>
+				<p:panel header="Pesquisa de Pacientes" style="text-align:center">
+					<div class="ui-g">
+						<h:panelGroup id="botoes">
+							<!-- Botão Pagamento -->
+							<p:commandButton value="Pagamento"
+								actionListener="#{contasReceberBean.setarVariaveisNulas}"
+								rendered="#{contasReceberBean.contasReceberModel.status eq 'P' and (
+										contasReceberBean.contasReceberModel.idContasReceber > 0)}"
+								style="height:40px;width:170px; 
+								background-color: darkcyan; background: darkcyan; color:white !important"
+								ajax="true" immediate="true" id="buttonPagamento"
+								icon="fa fa-info-circle" iconPos="right"
+								oncomplete="PF('relancarPagamento').show()" update=":formulario">
+								<f:setPropertyActionListener value="#{d}"
+									target="#{contasReceberBean.contasReceberModel}" />
+							</p:commandButton>
 
-						<p:commandButton
-							style="height:40px;width:170px; 
-						background-color: blue; background: blue; color:white !important"
-							value="Editar Pagamento"
-							rendered="#{contasReceberBean.contasReceberModel.status eq 'L'  and
-						(contasReceberBean.contasReceberModel.idContasReceber > 0)}"
-							onclick="PF('relancarPagamento').show()">
-						</p:commandButton>
-					</h:panelGroup>
-					<div class="ui-g-12 ui-lg-3">
-						<p:selectOneRadio value="#{contasReceberBean.campoBuscaTipoConta}">
-							<f:selectItem itemLabel="Pendente" itemValue="P" />
-							<f:selectItem itemLabel="Lançado" itemValue="L" />
-							<f:selectItem itemLabel="Pago" itemValue="PA" />
-							<p:ajax event="change" update="table"
-								listener="#{contasReceberBean.busca}" />
-						</p:selectOneRadio>
+							<p:commandButton
+								style="height:40px;width:170px; 
+								background-color: blue; background: blue; color:white !important"
+								value="Editar Pagamento" update=":relancarForm"
+								rendered="#{contasReceberBean.contasReceberModel.status eq 'L'  and
+											(contasReceberBean.contasReceberModel.idContasReceber > 0)}"
+								onclick="PF('relancarPagamento').show()">
+							</p:commandButton>
+						</h:panelGroup>
+						<div class="ui-g-12 ui-lg-3">
+							<p:selectOneRadio
+								value="#{contasReceberBean.campoBuscaTipoConta}">
+								<f:selectItem itemLabel="Pendente" itemValue="P" />
+								<f:selectItem itemLabel="Lançado" itemValue="L" />
+								<f:selectItem itemLabel="Pago" itemValue="PA" />
+								<p:ajax event="change" update="@form"
+									listener="#{contasReceberBean.busca}" />
+							</p:selectOneRadio>
+						</div>
+						<div class="ui-g-12 ui-lg-3">
+							<div class="ui-inputgroup">
+								<p:inputText
+									value="#{contasReceberBean.campoBuscaContasReceber}"
+									placeholder="Buscar pelo Nome do Paciente" id="inputNome"
+									style="height:40px; font-size: large !important; font-weight: bold; " />
+								<p:commandButton style="height:40px; " styleClass="btn btn-blue"
+									icon="ui-icon-search" id="btnBuscatxt"
+									actionListener="#{contasReceberBean.busca}"
+									update=" inputNome,table,formPai:botoes" />
+							</div>
+						</div>
+
 					</div>
-					<div class="ui-g-12 ui-lg-4" align="center">
-						<p:inputText value="#{contasReceberBean.campoBuscaContasReceber}"
-							placeholder="Buscar pelo Nome do Paciente" id="inputNome"
-							style="height:40px; ">
-						</p:inputText>
+				</p:panel>
+				<p:panel>
+					<div class="ui-g">
+						<p:dataTable value="#{contasReceberBean.lstContasReceber}" var="d"
+							emptyMessage="Não Há Registros" styleClass="table.gridtable"
+							rowKey="#{d.idContasReceber}" selectionMode="single" id="table"
+							paginator="true" rows="8" 
+							selection="#{contasReceberBean.contasReceberModel}">
+
+							<p:ajax event="rowSelect"
+								listener="#{contasReceberBean.onRowSelect}"
+								update="table, formPai:botoes" />
+
+							<p:column headerText="Status" priority="1"
+								style="overflow: hidden;text-align: center; font-size: medium;width: 10%">
+								<p:outputLabel value="Pendente" rendered="#{d.status eq 'P'}"
+									style="color : red" />
+								<p:outputLabel value="Lançada" rendered="#{d.status eq 'L'}"
+									style="color : blue" />
+								<p:outputLabel value="Pago" rendered="#{d.status eq 'PA'}"
+									style="color : green" />
+							</p:column>
+
+
+							<p:column headerText="Usuário"
+								style="overflow: hidden;text-align: center; font-size: large;"
+								width="10%">
+								<p:outputLabel value="#{d.login.login.toUpperCase()}" />
+							</p:column>
+
+							<p:column headerText="Paciente"
+								style="text-align: left; font-size: large" width="30%">
+								<p:outputLabel value="#{d.paciente.pessoa.pessoaNome}" />
+								<p:outputLabel value=" | #{d.paciente.convenio.nomeConvenio}" />
+							</p:column>
+							<p:column headerText="Data de Pagamento"
+								style="text-align: center; font-size: large" width="15%">
+								<p:outputLabel value="#{d.dataPagamento}"
+									rendered="#{d.dataPagamento != null}">
+									<f:convertDateTime pattern="dd/MM/yyyy HH:mm" locale="pt_BR"
+										timeZone="America/Sao_Paulo" />
+								</p:outputLabel>
+
+								<p:outputLabel value="Consulta não quitada"
+									rendered="#{d.dataPagamento == null}" style="color:red" />
+							</p:column>
+							<p:column headerText="Valor"
+								style="text-align: right; font-size: large" width="10%">
+								<p:outputLabel style="color: red" value="R$ #{d.valorConsulta}" />
+							</p:column>
+
+							<p:column headerText="Resumo" width="10%">
+								<p:commandButton
+									action="#{contasReceberBean.selecionarBusca(contasReceberBean.contasReceberModel)}"
+									update=":formulario:tableParcelas,:pagamentoEspecial:tableEspecial"
+									ajax="true" value="ITEMS" immediate="true">
+									<f:setPropertyActionListener value="#{d}"
+										target="#{contasReceberBean.contasReceberModel}" />
+								</p:commandButton>
+							</p:column>
+						</p:dataTable>
 					</div>
-
-					<div class="ui-g-12 ui-lg-1">
-						<p:commandButton style="height:40px; " styleClass="btn btn-blue"
-							icon="ui-icon-search" id="btnBuscatxt"
-							actionListener="#{contasReceberBean.busca}"
-							update=" inputNome,table" />
-						<p:defaultCommand target="btnBuscatxt" />
-					</div>
-				</div>
-				<div class="ui-g">
-					<br />
-					<p:dataTable value="#{contasReceberBean.lstContasReceber}" var="d"
-						emptyMessage="Não Há Registros" styleClass="table.gridtable"
-						rowKey="#{d.idContasReceber}" selectionMode="single" id="table"
-						paginator="true" rows="8"
-						selection="#{contasReceberBean.contasReceberModel}">
-
-						<p:ajax event="rowSelect"
-							listener="#{contasReceberBean.onRowSelect}"
-							update="table, formPai:botoes" />
-
-						<p:column headerText="Status" priority="1"
-							style="overflow: hidden;text-align: center; font-size: medium;width: 10%">
-							<p:outputLabel value="Pendente" rendered="#{d.status eq 'P'}"
-								style="color : red" />
-							<p:outputLabel value="Lançada" rendered="#{d.status eq 'L'}"
-								style="color : blue" />
-							<p:outputLabel value="Pago" rendered="#{d.status eq 'PA'}"
-								style="color : green" />
-						</p:column>
-
-
-						<p:column headerText="Usuário"
-							style="overflow: hidden;text-align: center; font-size: medium; width: 10%">
-							<p:outputLabel style=" font-size: medium"
-								value="#{d.login.login.toUpperCase()}" />
-						</p:column>
-
-						<p:column headerText="Paciente" priority="5"
-							style="overflow: hidden;text-align: left; font-size: medium">
-							<p:outputLabel style=" font-size: medium"
-								value="#{d.paciente.pessoa.pessoaNome}" />
-							<br />
-							<p:outputLabel style=" font-size: medium"
-								value="#{d.paciente.convenio.nomeConvenio}" />
-						</p:column>
-
-						<p:column headerText="Pagamento" priority="4">
-							<p:outputLabel value="Valor Consulta : "
-								style="font-size: medium;" />
-							<p:outputLabel style=" font-size: medium; color: red"
-								value="R$ #{d.valorConsulta}" />
-
-						</p:column>
-						<p:column headerText="Parcelas" priority="1" style="width: 10%"
-							rendered="#{contasReceberBean.contasReceberModel.status eq 'L' or
-										contasReceberBean.contasReceberModel.status eq 'PA' and
-							contasReceberBean.contasReceberModel.idContasReceber > 0}">
-							<p:commandButton icon=" ui-icon-transferthick-e-w"
-								value="Parcelas" update=" :formulario:tableParcelas"
-								actionListener="#{contasReceberBean.buscaParcelas}"
-								onclick="PF('mostraParcelas').show()" />
-						</p:column>
-					</p:dataTable>
-				</div>
+				</p:panel>
 			</div>
 		</div>
 	</p:panel>
