--- a/WebContent/cadastro/cadPaciente.xhtml
+++ b/WebContent/cadastro/cadPaciente.xhtml
@@ -236,7 +236,7 @@
 													<h:outputText value="#{a.nomeConvenio}" />
 												</p:column>
 											</p:autoComplete>
-											<p:commandButton styleClass="width: 15px" icon="ui-icon-plus"
+											<p:commandButton  icon="ui-icon-plus"
 												immediate="true" 
 												action="#{convenioBean.redirecionarFindEntidade}">
 												<p:confirm
