--- a/WebContent/financeiro/receber/receberConsulta.xhtml
+++ b/WebContent/financeiro/receber/receberConsulta.xhtml
@@ -29,13 +29,12 @@
 }
 
 .ui-fluid .ui-inputtext {
-    width: 100%;
-    height: 35px;
-    font-size: large;
-    text-align: center;
-    color: black;
+	width: 100%;
+	height: 35px;
+	font-size: large;
+	text-align: center;
+	color: black;
 }
-
 
 .ui-g label {
 	font-size: medium;
@@ -103,17 +102,17 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 }
 
 .ui-dialog .ui-dialog-content {
-    position: relative;
-    border: 0;
-    padding: 0px;
-    background: none;
-    overflow: auto;
-    zoom: 1;
+	position: relative;
+	border: 0;
+	padding: 0px;
+	background: none;
+	overflow: auto;
+	zoom: 1;
 }
 
-.painelPaciente{
+.painelPaciente {
 	background-color: #5c9ccc;
-	width: 100%; 
+	width: 100%;
 	padding: 2%;
 }
 </style>
@@ -131,162 +130,201 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 
 		<!-- DIALOG -->
 		<p:dialog widgetVar="mostraParcelas" id="mostraParcelas" modal="true"
-			resizable="false" height="150" width="800" dynamic="true" responsive="true"
-			onHide="atualizarAoSair()" appendToBody="@body" header="Parcelas">
+			resizable="false" height="200" width="800" dynamic="true"
+			responsive="true" onHide="atualizarAoSair()" appendToBody="@body"
+			header="Parcelas">
 			<h:form id="formulario">
 				<p:remoteCommand name="atualizarAoSair" update="@form"
 					actionListener="#{contasReceberBean.busca}" />
+<br />
 
-				<p:commandButton
-					style="height:40px;width:200px; background-color: green; 
+				<div class="ui-g">
+					<p:commandButton
+						style="height:40px;width:200px; background-color: green; margin: 0 auto ;
 							background: green; color:white !important"
-					rendered="#{contasReceberBean.parcelaPagarModel.situacao eq 'P' and
+						rendered="#{contasReceberBean.parcelaPagarModel.situacao eq 'P' and
 					contasReceberBean.parcelaPagarModel.idParcela > 0}"
-					value="Pagar Parcela" update="tableParcelas"
-					actionListener="#{contasReceberBean.pagarParcela}" />
+						value="Pagar Parcela" update="tableParcelas"
+						actionListener="#{contasReceberBean.pagarParcela}" />
 
-				<p:commandButton
-					style="height:40px;width:200px; background-color: red; 
+					<p:commandButton
+						style="height:40px;width:200px; background-color: red;  margin: 0 auto;; 
 							background: red; color:white !important"
-					rendered="#{contasReceberBean.parcelaPagarModel.situacao eq 'PA' and
+						rendered="#{contasReceberBean.parcelaPagarModel.situacao eq 'PA' and
 								contasReceberBean.contasReceberModel.status eq 'L' and
 								loginBean.usuarioLogadoSecurity eq 'admin' or
 								loginBean.usuarioLogadoSecurity eq 'ate' and
 								contasReceberBean.parcelaPagarModel.idParcela > 0 }"
-					value="Estornar Parcela USER" update="tableParcelas"
-					actionListener="#{contasReceberBean.estornarParcelas}" />
+						value="Estornar Parcela (ATE)" update="tableParcelas"
+						actionListener="#{contasReceberBean.estornarParcelas}" />
 
-				<p:commandButton
-					style="height:40px;width:200px; background-color: red; 
+					<p:commandButton
+						style="height:40px;width:200px; background-color: red;  margin: 0 auto;
 							background: red; color:white !important"
-					rendered="#{contasReceberBean.parcelaPagarModel.situacao eq 'PA' and
+						rendered="#{contasReceberBean.parcelaPagarModel.situacao eq 'PA' and
 								contasReceberBean.contasReceberModel.status eq 'PA'  and
 								loginBean.usuarioLogadoSecurity eq 'admin' and
 								contasReceberBean.parcelaPagarModel.idParcela > 0 }"
-					value="Estornar Parcela de Conta Paga ADM" update="tableParcelas"
-					actionListener="#{contasReceberBean.estornarParcelasPagas}" />
+						value="Estornar Parcela (ADM)" update="tableParcelas"
+						actionListener="#{contasReceberBean.estornarParcelasPagas}" />
 
-				<p:dataTable value="#{contasReceberBean.lstParcelaPagarPendentes}"
-					var="d"  rowKey="#{d.idParcela}"
-					selectionMode="single" id="tableParcelas" 
-					selection="#{contasReceberBean.parcelaPagarModel}">
+					<p:commandButton value="Fechar" onclick="PF(mostraParcelas).hide()"
+						style="height:40px;  margin: 0 auto; width:130px; " />
+				</div>
+				<br />
+				<div class="ui-g">
+					<p:dataTable value="#{contasReceberBean.lstParcelaPagarPendentes}"
+						var="d" rowKey="#{d.idParcela}" selectionMode="single"
+						id="tableParcelas"
+						selection="#{contasReceberBean.parcelaPagarModel}">
 
-					<p:ajax event="rowSelect"
-						listener="#{contasReceberBean.onRowSelectParcelas}"
-						update="tableParcelas , @form" />
+						<p:ajax event="rowSelect"
+							listener="#{contasReceberBean.onRowSelectParcelas}"
+							update="tableParcelas , @form" />
 
-					<p:column headerText="Nº Parcela" priority="1"
-						style="width:10%; text-align:center; ">
-						<p:outputLabel value="#{d.numeroParcela}" />
-					</p:column>
-					<p:column headerText="Vencimento" priority="1"
-						style="text-align:center; width: 20% ; font-size: large">
-						<p:outputLabel value="#{d.dataVencimento}">
-							<f:convertDateTime timeZone="America/Sao_Paulo" />
-						</p:outputLabel>
-					</p:column>
-					<p:column headerText="Pagamento" priority="1"
-						style="text-align:center; width: 20% ; font-size: large">
-						<p:outputLabel value="#{d.dataPagamento}">
-							<f:convertDateTime timeZone="America/Sao_Paulo" />
-						</p:outputLabel>
-					</p:column>
-					<p:column headerText="Situação" priority="1"
-						style="width: 20%; text-align:center; font-size: large">
-						<p:outputLabel value="Pendente" rendered="#{d.situacao eq 'P'}"
-							style="color : green" />
-						<p:outputLabel value="Paga" rendered="#{d.situacao eq 'PA'}"
-							style="color : red" />
-					</p:column>
+						<p:column headerText="Nº Parcela" priority="1"
+							style="width:10%; text-align:center; ">
+							<p:outputLabel value="#{d.numeroParcela}" />
+						</p:column>
+						<p:column headerText="Vencimento" priority="1"
+							style="text-align:center; width: 20% ; font-size: large">
+							<p:outputLabel value="#{d.dataVencimento}">
+								<f:convertDateTime timeZone="America/Sao_Paulo" />
+							</p:outputLabel>
+						</p:column>
+						<p:column headerText="Pagamento" priority="1"
+							style="text-align:center; width: 20% ; font-size: large">
+							<p:outputLabel value="#{d.dataPagamento}">
+								<f:convertDateTime timeZone="America/Sao_Paulo" />
+							</p:outputLabel>
+						</p:column>
+						<p:column headerText="Situação" priority="1"
+							style="width: 20%; text-align:center; font-size: large">
+							<p:outputLabel value="Pendente" rendered="#{d.situacao eq 'P'}"
+								style="color : green" />
+							<p:outputLabel value="Paga" rendered="#{d.situacao eq 'PA'}"
+								style="color : red" />
+						</p:column>
 
-					<p:column headerText="Valor" priority="1"
-						style="text-align:right; width: 15%; font-size: large">
-					<p:outputLabel value="R$" />	
-					<p:outputLabel value="#{d.valorBruto}" />
-					</p:column>
-				</p:dataTable>
+						<p:column headerText="Valor" priority="1"
+							style="text-align:right; width: 15%; font-size: large">
+							<p:outputLabel value="R$" />
+							<p:outputLabel value="#{d.valorBruto}" />
+						</p:column>
+					</p:dataTable>
+				</div>
+
 			</h:form>
 		</p:dialog>
-		
-		<p:dialog widgetVar="mostraPagamentoEspecial" id="mostraPagamentoEspecial"
-			modal="true" resizable="false" height="150" width="800"
-			responsive="true" dynamic="true" appendToBody="@body" header="Pagamento Especial">
+
+		<p:dialog widgetVar="mostraPagamentoEspecial"
+			id="mostraPagamentoEspecial" modal="true" resizable="false"
+			height="200" width="800" responsive="true" dynamic="true"
+			appendToBody="@body" header="Pagamento Especial">
 			<div class="ui-fluid">
-				<div class="ui-g">
-					<div class="ui-g-12">
-						<div class="card card-w-title">
-							<div class="ui-g-12 ui-lg-12 ui-sm-12">
-								<h:form id="pagamentoEspecial">
-									<p:dataTable value="#{contasReceberBean.lstEspecialPagarPendentes}"
-										var="d"  rowKey="#{d.idPagamentoEspecial}"
-										selectionMode="single" id="tableEspecial" reflow="true"
-										selection="#{contasReceberBean.pagamentoEspecialModel}">
-											<p:column headerText="Lancamento" style="text-align:center;font-size: large">
-												<p:outputLabel value="#{d.dataLancamento}"  >
-													<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo" locale="pt_BR" />
-												</p:outputLabel>
-											</p:column>
-											<p:column headerText="Vencimento" style="text-align:center;font-size: large">
-												<p:outputLabel value="#{d.dataVencimento}"  >
-													<f:convertDateTime pattern="dd/MM/yyyy" timeZone="America/Sao_Paulo" locale="pt_BR" />
-												</p:outputLabel>
-											</p:column>
-											<p:column headerText="Forma" style="text-align:right; font-size:large">
-												<p:outputLabel value="#{d.formaPagamento.nomePagamento}" />
-											</p:column>
-											<p:column headerText="Situacao" style="text-align:center;font-size: large">
-												<p:outputLabel value="Pendente" rendered="#{d.situacao eq 'P'}"
-													style="color : green" />
-												<p:outputLabel value="Paga" rendered="#{d.situacao eq 'PA'}"
-													style="color : red" />
-											</p:column>
-											<p:column headerText="Valor" style="text-align:right; font-size: large">
-												<p:outputLabel value="R$ " />
-												<p:outputLabel value="#{d.valorBruto}" />
-											</p:column>
-										</p:dataTable>
-								</h:form>
-							</div>
-						</div>
+
+				<h:form id="pagamentoEspecial">
+				<br />
+					<div class="ui-g">
+						<p:commandButton
+							style="height:40px;width:200px; background-color: green; 
+											background: green; color:white !important"
+							rendered="#{contasReceberBean.pagamentoEspecialModel.situacao eq 'P' and
+											contasReceberBean.pagamentoEspecialModel.idPagamentoEspecial > 0}"
+							value="Pagar Parcela" update="tableEspecial"
+							actionListener="#{contasReceberBean.pagarEspecial}" />
+						<p:commandButton value="Fechar"
+							style="height:40px;  margin: 0 auto; width:130px; " onclick="PF(mostraPagamentoEspecial).hide()" />
 					</div>
-				</div>
+					<br />
+					<div class="ui-g">
+						<p:dataTable
+							value="#{contasReceberBean.lstEspecialPagarPendentes}" var="d"
+							rowKey="#{d.idPagamentoEspecial}" selectionMode="single"
+							id="tableEspecial" reflow="true"
+							selection="#{contasReceberBean.pagamentoEspecialModel}">
+							<p:ajax event="rowSelect"
+								listener="#{contasReceberBean.onRowSelectEspecial}"
+								update="pagamentoEspecial" />
+
+							<p:column headerText="Lancamento"
+								style="text-align:center;font-size: large">
+								<p:outputLabel value="#{d.dataLancamento}">
+									<f:convertDateTime pattern="dd/MM/yyyy"
+										timeZone="America/Sao_Paulo" locale="pt_BR" />
+								</p:outputLabel>
+							</p:column>
+							<p:column headerText="Vencimento"
+								style="text-align:center;font-size: large">
+								<p:outputLabel value="#{d.dataVencimento}">
+									<f:convertDateTime pattern="dd/MM/yyyy"
+										timeZone="America/Sao_Paulo" locale="pt_BR" />
+								</p:outputLabel>
+							</p:column>
+							<p:column headerText="Forma"
+								style="text-align:center;font-size:large">
+								<p:outputLabel value="#{d.formaPagamento.nomePagamento}" />
+							</p:column>
+							<p:column headerText="Situacao"
+								style="text-align:center;font-size: large">
+								<p:outputLabel value="Pendente" rendered="#{d.situacao eq 'P'}"
+									style="color : green" />
+								<p:outputLabel value="Paga" rendered="#{d.situacao eq 'PA'}"
+									style="color : red" />
+							</p:column>
+							<p:column headerText="Valor"
+								style="text-align:right; font-size: large">
+								<p:outputLabel value="R$ " />
+								<p:outputLabel value="#{d.valorBruto}" />
+							</p:column>
+						</p:dataTable>
+					</div>
+
+				</h:form>
 			</div>
 		</p:dialog>
 
 		<p:dialog widgetVar="relancarPagamento" id="relancarPagamento"
-			modal="true" resizable="false" height="400" width="900" 
-			responsive="true" dynamic="true" appendToBody="@body" header="Lançamento de Pagamento">
+			modal="true" resizable="false" height="400" width="900"
+			responsive="true" dynamic="true" appendToBody="@body"
+			header="Lançamento de Pagamento">
 			<div class="ui-fluid">
-			<h:form id="relancarForm">
-				<div class="ui-g">
-					<p:outputPanel styleClass="painelPaciente" >
-						<div class="ui-g">
-							<div class="ui-g-12 ui-lg-5">
-								<h:outputLabel value="Paciente" style="font-size: large;color:white" />
-								<br />
-								<h:outputLabel style="font-size: large; color:white;"
-									value="#{contasReceberBean.contasReceberModel.paciente.pessoa.pessoaNome}" />
+				<h:form id="relancarForm">
+					<div class="ui-g">
+						<p:outputPanel styleClass="painelPaciente">
+							<div class="ui-g">
+								<div class="ui-g-12 ui-lg-5">
+									<h:outputLabel value="Paciente"
+										style="font-size: large;color:white" />
+									<br />
+									<h:outputLabel style="font-size: large; color:white;"
+										value="#{contasReceberBean.contasReceberModel.paciente.pessoa.pessoaNome}" />
+								</div>
+
+								<div class="ui-g-12 ui-lg-3">
+									<h:outputLabel value="Consulta"
+										style="font-size: large;color:white" />
+									<br />
+									<p:outputLabel required="true"
+										style="font-size: large; color:white"
+										value="R$ #{contasReceberBean.contasReceberModel.valorConsulta}" />
+								</div>
+
+								<div class="ui-g-12 ui-lg-4">
+									<h:outputLabel value="Total Desconto/Entrada"
+										style="font-size: large; color:white" />
+									<br />
+									<p:outputLabel id="valorComDesconto"
+										style="font-size: large; color:white"
+										value="R$ #{contasReceberBean.contasReceberModel.valorComDesconto}">
+
+									</p:outputLabel>
+								</div>
 							</div>
-	
-							<div class="ui-g-12 ui-lg-3">
-								<h:outputLabel value="Consulta" style="font-size: large;color:white" />
-								<br />
-								<p:outputLabel required="true" style="font-size: large; color:white" value="R$ #{contasReceberBean.contasReceberModel.valorConsulta}" />
-							</div>
-	
-							<div class="ui-g-12 ui-lg-4">
-								<h:outputLabel value="Total Desconto/Entrada" style="font-size: large; color:white" />
-								<br />
-								<p:outputLabel id="valorComDesconto" style="font-size: large; color:white"
-									value="R$ #{contasReceberBean.contasReceberModel.valorComDesconto}">
-	
-								</p:outputLabel>
-							</div>
-						</div>
-					</p:outputPanel>
-					<div class="ui-g-12">
-						<div class="card card-w-title">
-							<div class="ui-g-12 ui-lg-12">
+						</p:outputPanel>
+						<div class="ui-g-12">
+							<div class="card card-w-title">
+								<div class="ui-g-12 ui-lg-12">
 									<div class="ui-g">
 										<div class="ui-g-12 ui-lg-2">
 											<h:outputLabel value="Desconto" />
@@ -298,7 +336,7 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 													listener="#{contasReceberBean.fazerDesconto}" />
 											</p:inputNumber>
 										</div>
-										
+
 										<div class="ui-g-12 ui-lg-2">
 											<h:outputLabel value="Entrada" />
 											<br />
@@ -310,7 +348,7 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 
 											</p:inputNumber>
 										</div>
-										
+
 										<div class="ui-g-12 ui-lg-6 ui-sm-12">
 											<h:outputLabel value="Duas Formas de Pagamento?" />
 											<p:selectOneRadio
@@ -394,7 +432,8 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 														<h:outputLabel value="Valor" />
 														<p:inputNumber value="#{contasReceberBean.valorUm}"
 															symbol="R$">
-															<p:ajax update="valorDois" event="change" listener="#{contasReceberBean.recalcularDuasFormas}" />
+															<p:ajax update="valorDois" event="change"
+																listener="#{contasReceberBean.recalcularDuasFormas}" />
 														</p:inputNumber>
 													</div>
 
@@ -420,15 +459,16 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 
 													<div class="ui-g-12 ui-lg-3 ui-sm-12">
 														<h:outputLabel value="Valor" />
-														<p:inputNumber id="valorDois"  disabled="true" value="#{contasReceberBean.valorDois}"
-															symbol="R$">
+														<p:inputNumber id="valorDois" disabled="true"
+															value="#{contasReceberBean.valorDois}" symbol="R$">
 														</p:inputNumber>
 													</div>
 
 													<div class="ui-g-12 ui-lg-2 ui-sm-12">
 														<h:outputLabel value="Vencimento" />
 														<p:calendar value="#{contasReceberBean.vencimentoDois}"
-															mindate="#{contasReceberBean.vencimentoUm}" pattern="dd/MM/yyyy">
+															mindate="#{contasReceberBean.vencimentoUm}"
+															pattern="dd/MM/yyyy">
 														</p:calendar>
 													</div>
 												</div>
@@ -443,11 +483,11 @@ ui-fluid .ui-autocomplete, .ui-fluid .ui-autocomplete-input {
 												actionListener="#{contasReceberBean.editarPagamento}" />
 										</div>
 									</div>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-			</h:form>
+				</h:form>
 			</div>
 		</p:dialog>
 
